# electron-react-fastapi

./: .gitignore  README.md
blog/src/: App.css  App.js
electron-react-fastapi-todo/todo/: pyproject.toml
electron-react-fastapi-todo/todo/todo/: main.py
electron-react-fastapi-todo/todo/todo/models/: models.py
fastapi-basic/: main.py  pyproject.toml
fastapi-basic-files/: main.py  pyproject.toml
js-tetris/: style.css
opentutorials/src/: App.css  App.js
react-blog/: README.md
react-opentutorials/: package-lock.json  package.json
tetris/: index.html  tetris.js
youtube/: index.html
